[gd_scene load_steps=10 format=3 uid="uid://c00betudi16kj"]

[ext_resource type="Script" path="res://Scenes/UI/Menu/menu.gd" id="1_uun7w"]
[ext_resource type="FontFile" uid="uid://bar3txxarkntj" path="res://Assets/Fonts/GamegirlClassic-9MVj.ttf" id="1_wbdkw"]
[ext_resource type="FontFile" uid="uid://yer46p5f54ad" path="res://Assets/Fonts/alterebro-pixel-font.ttf" id="2_7sj83"]
[ext_resource type="StyleBox" uid="uid://htgk60qdejly" path="res://Assets/non_selected_button.tres" id="3_ahxo5"]
[ext_resource type="AudioStream" uid="uid://bowkdmq7jx6bw" path="res://Soundtrack/galinha1v2.ogg" id="5_osdt6"]
[ext_resource type="PackedScene" uid="uid://djohl2wslk4em" path="res://Scenes/UI/Menu/utf_logo.tscn" id="6_hgdib"]
[ext_resource type="PackedScene" uid="uid://cpcnr11r8bi4g" path="res://Scenes/UI/Leaderboard/leaderboard.tscn" id="7_xmemb"]
[ext_resource type="PackedScene" uid="uid://bj5puppd5mmjp" path="res://Scenes/UI/Audio/audio_slider.tscn" id="8_bt3d3"]

[sub_resource type="Theme" id="Theme_haijf"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uun7w")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.670588, 0.92549, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainerOne" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainerOne"]
layout_mode = 2
theme = SubResource("Theme_haijf")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("1_wbdkw")
text = "FREEWAY"
horizontal_alignment = 1

[node name="Singleplayer" type="Button" parent="MarginContainer/VBoxContainerOne"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7sj83")
theme_override_styles/normal = ExtResource("3_ahxo5")
text = "Singleplayer"

[node name="Multiplayer" type="Button" parent="MarginContainer/VBoxContainerOne"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7sj83")
theme_override_styles/normal = ExtResource("3_ahxo5")
text = "Multiplayer"

[node name="Leaderboard" type="Button" parent="MarginContainer/VBoxContainerOne"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7sj83")
theme_override_styles/normal = ExtResource("3_ahxo5")
text = "Leaderboard"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainerOne"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7sj83")
theme_override_styles/normal = ExtResource("3_ahxo5")
text = "Sair"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_osdt6")
autoplay = true

[node name="UTFlogo" parent="." instance=ExtResource("6_hgdib")]
offset_left = 33.0
offset_top = 148.0
offset_right = 33.0
offset_bottom = 148.0
scale = Vector2(0.6, 0.608028)

[node name="Creditos" type="Label" parent="."]
layout_mode = 0
offset_left = 228.0
offset_top = 143.0
offset_right = 340.0
offset_bottom = 179.0
theme = SubResource("Theme_haijf")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_7sj83")
theme_override_font_sizes/font_size = 10
text = "Programação: Fabricio Damasceno
Música: Gustavo Favaro
Artes Adicionais:  Lucca Toledo"

[node name="Leaderboard" parent="." instance=ExtResource("7_xmemb")]
visible = false
layout_mode = 1

[node name="AudioSlider" parent="." instance=ExtResource("8_bt3d3")]
layout_mode = 0
offset_left = 18.0
offset_top = 1.0
offset_right = 68.0
offset_bottom = 17.0
bus_name = "Master"

[connection signal="show_leaderboard" from="." to="Leaderboard" method="_on_menu_show_leaderboard"]
[connection signal="pressed" from="MarginContainer/VBoxContainerOne/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainerOne/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainerOne/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainerOne/Exit" to="." method="_on_exit_pressed"]
[connection signal="go_back" from="Leaderboard" to="." method="_on_leaderboard_go_back"]
